# Greenstack

./: CMakeLists.txt
dependencies/: FindCouchbaseFlatbuffers.cmake  manifest.cmake
dependencies/gtest/: README.md
include/: CMakeLists.txt
include/libgreenstack/: Buffer.h  CMakeLists.txt  FlexHeader.h  Frame.h  Greenstack.h  Message.h  MessageStream.h  Opcodes.h  Reader.h  Request.h  Response.h  Status.h  Writer.h  visibility.h
include/libgreenstack/core/: CMakeLists.txt  Hello.h  SaslAuth.h
include/libgreenstack/memcached/: AssumeRole.h  CMakeLists.txt  Cas.h  Compression.h  CreateBucket.h  Datatype.h  DeleteBucket.h  Document.h  DocumentInfo.h  Get.h  ListBuckets.h  Mutation.h  SelectBucket.h
libgreenstack/: CMakeLists.txt  FlatbufferAllocator.h  FlexHeader.cc  Frame.cc  Message.cc  MessageStream.cc  Opcodes.cc  Reader.h  Request.cc  Response.cc  Status.cc  Writer.h  config.in.h
libgreenstack/core/: Hello.cc  SaslAuth.cc
libgreenstack/memcached/: AssumeRole.cc  Cas.cc  Compression.cc  CreateBucket.cc  Datatype.cc  DeleteBucket.cc  DocumentInfo.cc  Get.cc  ListBuckets.cc  Mutation.cc  SelectBucket.cc
payload/: CMakeLists.txt  CreateBucketRequest.fbs  DeleteBucketRequest.fbs  Document.fbs
platform/: CMakeLists.txt  dummy.c  dummy.h  ntohll.c
platform/include/win32/: strings.h
tests/: AssumeRoleTest.cc  ByteArrayReaderTest.cc  ByteArrayWriterTest.cc  CMakeLists.txt  CreateBucketTest.cc  DeleteBucketTest.cc  FlexHeaderTest.cc  FrameTest.cc  GetTest.cc  HelloTest.cc  ListBucketsTest.cc  MutationTest.cc  RequestTest.cc  ResponseTest.cc  SaslTest.cc  SelectBucketTest.cc  bitfield_pack_test.cc  encodedecode_test.cc  flexheader_test.cc  frame_test.cc  messagestream_test.cc  request_test.cc
